# radi

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: test.yml
docs/: introspection-query.json  listen-schema.graphql  listen-schema.json  normalize-schema.py
src/: app.rs  config.rs  main.rs
src/audio/: denoiser.rs  encoder.rs  mod.rs  processor.rs  recorder.rs
src/tui/: event.rs  mod.rs  splash.rs  ui.rs
src/upload/: listen.rs  metadata.rs  mod.rs  progress.rs  rehydrate.rs
