[package]
name = "radi"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
cpal = "0.15"
mp3lame-encoder = "0.2"
anyhow = "1"
chrono = "0.4"
nnnoiseless = "0.5"
rubato = "0.16"
dirs = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
